[package]
name = "portal-pc-waffle-attune"
version = "0.1.2"
edition = "2021"
description = "Obfuscation for waffle"
license = "CC0-1.0"

[dependencies]
anyhow = "1.0.95"
arena-traits = "0.2.1"
bit-iter = "1.2.0"
portal-pc-waffle.workspace = true
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_derive2 = "0.1.21"
stacker = "0.1.17"
